# PearEngine

./: CMakeLists.txt  README.md  TODO.txt  fastbuild
Resources/Textures/SpriteSheets/: minotaur.sp
cmake_modules/: FindFreetype.cmake~  FindGLEW.cmake  FindOpenGL.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake
core/: CMakeLists.txt
core/src/app/: application.cpp  input.cpp  resource_manager.cpp
core/src/graphics/: shader.cpp
core/src/graphics/Render2D/: animation.cpp  font.cpp  label.cpp  sprite.cpp  sprite_renderer.cpp  spritesheet.cpp  static_sprite_renderer.cpp
core/src/graphics/Render3D/: renderer3D.cpp
core/src/utilities/: error.cpp  fps_counter.cpp  string_manipulations.cpp  timer.cpp
include/PEngine/: pear_engine.h  string_constants.h
include/PEngine/app/: application.h  input.h  resource_manager.h  window.h
include/PEngine/graphics/: animation.h  font.h  group.h  label.h  render.h  renderable2D.h  renderer2D.h  renderer3D.h  shader.h  sprite.h  sprite_renderer.h  spritesheet.h  static_sprite_renderer.h  transformation_types.h
include/PEngine/graphics/shaders/: default_sprite_renderer~  default_sprite_shader  default_sprite_shader~  default_static_sprite_shader  default_static_sprite_shader~
include/PEngine/utilities/: error.h  fps_counter.h  load_text_file.h  string_manipulations.h  timer.h  utilities.h
include/glm/: CTestTestfile.cmake  Makefile
lib/freetype-gl/: platform.h  texture-atlas.h  texture-font.h  utf8-utils.h  vector.h
resources/Shaders/: standard_sprite_shader
src/: main.cpp  pear_engine.cpp  pear_engine.h  resource_manager.cpp  resource_manager.h  string_constants.h
src/Graphics/: resource_manager.cpp  resource_manager.h  shader.cpp  shader.h
src/Graphics/Render/: simple_sprite_renderer.cpp  simple_sprite_renderer.h  sprite.cpp  sprite.h  static_sprite_renderer.cpp  static_sprite_renderer.h
src/Graphics/Render2D/: animation.cpp  animation.h  renderable2D.cpp  renderable2D.h  renderer2D.h  sprite.cpp  sprite.h  sprite_renderer.cpp  sprite_renderer.h  spritesheet.cpp  spritesheet.cpp~  spritesheet.h  static_sprite_renderer.cpp  static_sprite_renderer.h
src/Graphics/Render3D/: renderer3D.cpp
src/Graphics/Shaders/: sprite_shader  standard_shader  static_sprite_shader16  static_sprite_shader32  test_shader
src/Input/: input.cpp  input.h
src/Utilities/: fatal_error.cpp  fatal_error.h  fatal_error.hpp  fps_counter.cpp  fps_counter.h  string_manipulations.cpp  string_manipulations.h  timer.cpp  timer.h
src/Window/: window.cpp  window.h
src/app/: input.cpp  resource_manager.cpp  window.cpp
src/graphics/Render2D/: font.cpp  group.cpp  label.cpp  renderable2D.cpp
src/utilities/: fps_counter.cpp  load_text_file.cpp
test/: CMakeLists.txt  CMakeLists.txt~
test/greenscreen_test/: CMakeLists.txt  greenscreen_test.cpp
test/src/: main.cpp
